--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.28'
     compileOnly "io.papermc.paper:paper-api:1.20-R0.1-SNAPSHOT"
     implementation 'org.mongodb:mongodb-driver-sync:5.0.1'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
 
 
