--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,8 @@ name: Comet
 version: '${version}'
 main: net.pulsir.comet.Comet
 api-version: '1.20'
+commands:
+  kick:
+  warn:
+  history:
+    aliases: [c]
